Change pom